2007-01-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (returnClassForVersion):  Take a default
	version argument.
	(returnClassForVersion):  Rename Version to Base.

	* pykickstart/parser.py:  Rename kshandlers to handler.

	* pykickstart/commands/base.py:  Rename BaseVersion to BaseHandler,
	registerHandler to registerCommand, and self.dispatcher to
	self.handler.
	* pykickstart/commands/fc4.py:  Likewise.
	* pykickstart/commands/fc5.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.

2007-01-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseVersion.overrideHandler):  Provide
	a way to create a new instance of the handler and have it used.  This
	allows a shortcut for wiping out all the attributes on an instance.
	(BaseVersion.__str__):  Newline after the platform is written.

	* pykickstart/commands/base.py (KickstartCommand.__init__):  Add the
	dispatcher setting back in.

2007-01-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseVersion._insertSorted):  When a
	subclass of BaseVersion registers a handler that already exists from a
	class higher up the chain, remove the existing handler in favor of the
	new one.

	* pykickstart/commands/fc4.py:  Put writePriority defaults in the
	default arguments to command objects instead of in the calls to
	creating them, as that didn't work for subclasses.  Also change how
	we handle default arguments that are lists.
	* pykickstart/commands/fc5.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.

2007-01-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc5.py (RaidData, Raid):  Make these classes
	subclass the ones in FC4Version, to the extent that can be done.
	* pykickstart/commands/fc6.py (NetworkData, Method, Monitor, Reboot):
	Likewise.

	* pykickstart/parser.py (Script.__str__):  Fix Script printing.

	* pykickstart/commands/fc6.py (FC6Version.Method):  Fix test for opts
	attribute.
